<resources>
    <string name="app_name">ICANTEEN</string>
    <string name="title_activity_random">Random</string>
    <string name="title_activity_choosing">Choose</string>
    <string name="title_activity_name_list">Restaurant List</string>
    <string name="title_activity_details">Details</string>
    <string name="title_activity_review">Review</string>
    <string name="RANDOM">RANDOM</string>
    <string name="CHOOSE">CHOOSE</string>
    <string name="FOOD">FOOD</string>
    <string name="BEVERAGE">BEVERAGE</string>
    <string name="DESSERT">DESSERT</string>
    <string name="food1">kin-Len</string>
    <string name="food2">ส้ม อาหารชุด</string>
    <string name="food3">รุจิศรี เส้นเล็กต้มยำ</string>
    <string name="food4">อรวรรณ ข้าวราดแกง</string>
    <string name="food5">ข้าวเหนียวไก่ทอด</string>
    <string name="food6">รัตน์ อาหารจานด่วน</string>
    <string name="food7">ลุงเหนอ ก๋วยเตี๋ยวทรงเครื่อง</string>
    <string name="food8">ข้าวราดแกงป้าหลง</string>
    <string name="food9">อ่องเหวิน ข้าวมันไก่</string>
    <string name="food10">สเต๊กสามย่าน</string>
    <string name="food11">อาหารตามสั่ง</string>
    <string name="dessert1">Parabola</string>
    <string name="dessert2">Fruit Shop</string>
    <string name="dessert3">ขนมหวานเย็น</string>
    <string name="dessert4">ร้าน6</string>
    <string name="beverage1">The Lobby</string>
    <string name="beverage2">ลุงชิน กาแฟสด</string>
    <string name="beverage3">สุชาดา น้ำผลไม้</string>
    <string name="beverage4">ก กาแฟสด</string>
    <string name="CATEGORY">CATEGORY</string>
    <string name="title_activity_thankyou">Thankyou</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


</resources>
