<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#800000">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dessert1"
        android:id="@+id/des1"
        android:onClick="chooseFood"
        android:textColor="#ffffff"
        android:background="#9d9d9d"
        android:layout_marginTop="150dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dessert2"
        android:id="@+id/des2"
        android:onClick="chooseFood"
        android:textColor="#ffffff"
        android:background="#9d9d9d"
        android:layout_marginTop="30dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dessert3"
        android:id="@+id/des3"
        android:onClick="chooseFood"
        android:textColor="#ffffff"
        android:background="#9d9d9d"
        android:layout_marginTop="30dp"/>

</LinearLayout>